--- a/B_drone_v3.ioc
+++ b/B_drone_v3.ioc
@@ -73,7 +73,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false
 NVIC.SPI1_IRQn=true\:1\:0\:true\:true\:true\:7
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM17_IRQn=true\:3\:0\:true\:true\:false\:5
+NVIC.TIM17_IRQn=true\:2\:0\:true\:true\:false\:5
 NVIC.USART1_IRQn=true\:2\:0\:true\:true\:true\:6
 NVIC.USB_IRQn=true\:0\:0\:false\:true\:true\:4
 PA0.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -123,11 +123,12 @@ PA7.GPIO_Label=MOSI
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Slave
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA8.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA8.GPIO_Label=Pin_0
 PA8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
 PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
