--- a/B_drone_v3.ioc
+++ b/B_drone_v3.ioc
@@ -70,11 +70,11 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PVD_VDDIO2_IRQn=true\:0\:0\:false\:true\:false\:1
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false
-NVIC.SPI1_IRQn=true\:1\:0\:true\:true\:true\:7
+NVIC.SPI1_IRQn=true\:1\:0\:true\:true\:true\:6
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM17_IRQn=true\:2\:0\:true\:true\:false\:5
-NVIC.USART1_IRQn=true\:2\:0\:true\:true\:true\:6
+NVIC.TIM17_IRQn=true\:2\:0\:true\:false\:true
+NVIC.USART1_IRQn=true\:2\:0\:true\:true\:true\:5
 NVIC.USB_IRQn=true\:0\:0\:false\:true\:true\:4
 PA0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0.GPIO_Label=IMU_INT
