math model included time delay -*-

--- a/B_drone_v3.ioc
+++ b/B_drone_v3.ioc
@@ -235,7 +235,8 @@ TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation2 CH2,Period
 TIM3.Period=2399
 USART1.BaudRate=115200
-USART1.IPParameters=BaudRate
+USART1.IPParameters=BaudRate,WordLength
+USART1.WordLength=UART_WORDLENGTH_8B
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,USBD_HandleTypeDef,CLASS_NAME_FS
 USB_DEVICE.USBD_HandleTypeDef=hUsbDeviceFS
